# CasePilot

./: .claudeignore  .gitignore  CLAUDE.md  README.md  ROADMAP.md  brainstorm.md  bundle-sample.md  components.json  context.md  index.html  llmchat.md  next-task.md  package-lock.json  package.json  phase4b.md  refactoring.md  tailwind.config.js  tasklist.md  temp.md  vitest.config.ts
.archive/: LLMchat.md  SG_Law_Practice_Links_Research.md  deep_research.md
.claude/: settings.json
.claude/agents/: ai-rag-engineer.md  editor-specialist.md  legal-ux-strategist.md  release-commander.md  rust-architect.md  test-engineer.md
.claude/rules/: ai-rag.md  backend.md  export.md  frontend.md  singapore-legal.md  testing.md
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  db.rs  lib.rs  main.rs  pdf.rs
src-tauri/src/commands/: case.rs  entry.rs  file.rs  mod.rs  pdf.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/pdf/: heuristics.rs  metadata.rs  mod.rs  text.rs
src/api/: cases.ts  entries.ts  files.ts  index.ts  types.ts
src/contexts/: DragContext.tsx
src/hooks/: useInvoke.test.ts  useInvoke.ts
src/lib/: api.ts  pagination.test.ts  pagination.ts  pdfWorker.ts
src/store/: useProjectStore.ts
src/test/: setup.ts
src/types/: canvas.ts  domain.ts  index.ts
test-fixtures/chats/: chat.txt
test-fixtures/docs/: administration_oath_(form_54)1a4e7780a36946958e3b488ff6adea0a.docx  (+1 more)
(+84 files in other folders)
